Added ngCloak directive to remove flickering

--- a/assignment-1/index.html
+++ b/assignment-1/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Assignment 1 | Lunch Check</title>
   </head>
-  <body>
+  <body ng-cloak>
     <div class="form-wrapper" ng-controller="LunchCheckController">
       <form class="checkLunch" ng-submit="checkItems();">
         <input type="text" ng-model="items">
